# ai-trade

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.research  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  closed-loop.yml  smoke.yml
apps/ai_trade_web/backend/: Dockerfile  README.md  requirements.txt
apps/ai_trade_web/backend/app/: __init__.py  main.py  settings.py
apps/ai_trade_web/backend/app/services/: governance.py  report_store.py
apps/ai_trade_web/backend/app/static/: app.js  index.html  styles.css
apps/ai_trade_web/backend/tests/: test_governance.py  test_report_store.py  test_web_static.py
config/: bybit.demo.aggressive.yaml  bybit.demo.evolution.yaml  bybit.demo.s5.yaml  bybit.demo.stable.yaml  bybit.demo.yaml  bybit.paper.stable.yaml  bybit.paper.yaml  bybit.replay.assess.maker_first.yaml  bybit.replay.assess.yaml  bybit.replay.yaml  data_pipeline.yaml  default.yaml
data/: trade.wal
deploy/: ecs-deploy.sh
docs/: 交易策略.md  实现路径.md  开发指南.md  数据加速链路.md  架构设计.md  规范约束.md  详细设计.md  配置手册.md  重构蓝图.md  需求描述.md  风险控制.md  验收清单.md
observability/grafana/dashboards/: ai-trade-prometheus-runtime.json  ai-trade-runtime.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/loki/: loki-config.yaml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: alerts.yml
observability/promtail/: promtail-config.yml
ops/: watchdog.py
ops/cron/: closed-loop.cron.example  install_closed_loop_cron.sh
src/: main.cpp
src/app/: bot_app.cpp  bot_app.h  intent_policy.h
src/core/: config.cpp  config.h  json_utils.cpp  json_utils.h  log.cpp  log.h  types.h
src/evolution/: self_evolution_controller.cpp  self_evolution_controller.h
src/exchange/: binance_exchange_adapter.cpp  binance_exchange_adapter.h  bybit_exchange_adapter.cpp  bybit_exchange_adapter.h  bybit_private_stream.cpp  bybit_private_stream.h  bybit_public_stream.cpp  bybit_public_stream.h  bybit_rest_client.cpp  bybit_rest_client.h  exchange_adapter.h  mock_exchange_adapter.cpp  mock_exchange_adapter.h  websocket_client.cpp  websocket_client.h
src/execution/: async_executor.cpp  async_executor.h  execution_engine.cpp  execution_engine.h  order_throttle.cpp  order_throttle.h
src/market/: market_data.cpp  market_data.h
src/monitor/: gate_monitor.cpp  gate_monitor.h
src/oms/: account_state.cpp  account_state.h  order_manager.cpp  order_manager.h  reconciler.cpp  reconciler.h
src/regime/: regime_engine.cpp  regime_engine.h
src/research/: ic_evaluator.cpp  ic_evaluator.h  miner.cpp  miner.h  online_feature_engine.cpp  online_feature_engine.h  time_series_operators.cpp  time_series_operators.h
src/risk/: risk_engine.cpp  risk_engine.h
src/storage/: wal_store.cpp  wal_store.h
src/strategy/: integrator_shadow.cpp  integrator_shadow.h  strategy_engine.cpp  strategy_engine.h
src/system/: trade_system.cpp  trade_system.h
src/universe/: universe_selector.cpp  universe_selector.h
tests/: test_trade_system.cpp
tools/: alpha_mechanism_probe.py  assess_run_log.py  backtest_walkforward.py  build_closed_loop_report.py  build_feature_store.py  build_periodic_summary.py  check_runtime_health.sh  closed_loop_mechanism_audit.py  closed_loop_runner.sh  compare_closed_loop_reports.py  data_quality_gate.py  docker_gc.sh  fetch_binance_archive.py  fetch_bybit_kline.py  freeze_baseline.py  gap_fill_klines.py  integrator_train.py  model_registry.py  quality_gate.sh  recycle_artifacts.sh  requirements-research.txt  run_data_pipeline.py  run_replay_validation.py  strategy_diagnose.py  stream_market_ws.py  test_alpha_mechanism_probe.py  test_assess_run_log.py  test_build_closed_loop_report.py  test_build_periodic_summary.py  test_check_runtime_health.py  test_closed_loop_mechanism_audit.py  test_compare_closed_loop_reports.py  test_compose_consistency.py  test_data_pipeline_tools.py  test_docker_gc.py  test_integrator_train.py  test_model_registry.py  test_recycle_artifacts.py  test_run_data_pipeline.py  test_run_replay_validation.py  (+4 more)
